添加安著頻果設定＆首頁建置

--- a/assignwork/pubspec.yaml
+++ b/assignwork/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   auto_size_text: ^2.0.0 #字體縮放
   flutter_screenutil: ^0.5.2 #固定字體大小，不被裝置系統字體影響
   pointycastle: ^1.0.1 #加解密機制pacs7 , aes ...
+  font_awesome_flutter: #flutter圖案
 dev_dependencies:
   json_serializable: ^3.0.0 #json模板
   build_runner: ^1.5.0
@@ -88,6 +89,7 @@ flutter:
     - static/images/welcomePic.png
     - static/images/bg.png
     - static/images/detail.png
+    - static/images/backGround.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
