--- a/assignwork/pubspec.yaml
+++ b/assignwork/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   pointycastle: ^1.0.1 #加解密機制pacs7 , aes ...
   font_awesome_flutter: #flutter圖案
   android_intent: #可以取得安卓系統資料
+  table_calendar: #日期選擇器
 dev_dependencies:
   json_serializable: ^3.0.0 #json模板
   build_runner: ^1.5.0
