--- a/assignwork/pubspec.yaml
+++ b/assignwork/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   font_awesome_flutter: #flutter圖案
   android_intent: #可以取得安卓系統資料
   table_calendar: #日期選擇器
+  keyboard_actions: ^3.1.2 #鍵盤action
 dev_dependencies:
   json_serializable: ^3.0.0 #json模板
   build_runner: ^1.5.0
